Change title and intro text.

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 carpentry: "swc"
 
 # Overall title for pages.
-title: "Programming with Python"
+title: "Defensive Programming with Python"
 
 #------------------------------------------------------------
 # Generic settings (should not need to change).
